--- a/srimongkol/Date List/DateCollectionViewCell.xib
+++ b/srimongkol/Date List/DateCollectionViewCell.xib
@@ -13,27 +13,167 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="DateCollectionViewCell" id="gTV-IL-0wX" customClass="DateCollectionViewCell" customModule="srimongkol" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="351" height="162"/>
+            <rect key="frame" x="0.0" y="0.0" width="351" height="489"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="351" height="162"/>
+                <rect key="frame" x="0.0" y="0.0" width="351" height="489"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yfC-wr-GFL">
-                        <rect key="frame" x="20" y="20" width="317" height="21"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <nil key="textColor"/>
-                        <nil key="highlightedColor"/>
-                    </label>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="niV-5a-nwa">
+                        <rect key="frame" x="16" y="100" width="319" height="373"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </view>
+                    <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" translatesAutoresizingMaskIntoConstraints="NO" id="TwD-29-ekW">
+                        <rect key="frame" x="16" y="100" width="319" height="373"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hVX-ws-0Az">
+                                <rect key="frame" x="0.0" y="0.0" width="319" height="373"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="MeP-pS-ZkZ">
+                                        <rect key="frame" x="32" y="32" width="255" height="309"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="สีมงคล" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6iX-gt-GsE">
+                                                <rect key="frame" x="0.0" y="0.0" width="255" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="XpQ-dS-Wfd"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tqb-WD-s59">
+                                                <rect key="frame" x="0.0" y="34" width="255" height="1"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="o0R-L6-6ei"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1Dr-bi-nx4">
+                                                <rect key="frame" x="0.0" y="39" width="255" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="thL-cv-nLY"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tYs-YH-f5R">
+                                                <rect key="frame" x="0.0" y="73" width="255" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="pdq-3F-3TC"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="S40-AQ-yoC">
+                                                <rect key="frame" x="0.0" y="107" width="255" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="NDg-mf-Ukq"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ayG-yY-vCa">
+                                                <rect key="frame" x="0.0" y="141" width="255" height="20"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="20" id="3K3-uI-FDf"/>
+                                                </constraints>
+                                            </view>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="สีอัปมงคล" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="arX-Gt-TLy">
+                                                <rect key="frame" x="0.0" y="165" width="255" height="30"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="DAc-RC-1mj"/>
+                                                </constraints>
+                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Sc-Ma-m3Q">
+                                                <rect key="frame" x="0.0" y="199" width="255" height="1"/>
+                                                <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="1" id="b5U-Wd-d1s"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="q3r-Rr-SHD">
+                                                <rect key="frame" x="0.0" y="204" width="255" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="gGl-uB-H4o"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yle-Jg-cHR">
+                                                <rect key="frame" x="0.0" y="238" width="255" height="30"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="30" id="icc-XJ-dhK"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GzY-Mj-Acc">
+                                                <rect key="frame" x="0.0" y="272" width="255" height="37"/>
+                                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                            </view>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="MeP-pS-ZkZ" firstAttribute="leading" secondItem="hVX-ws-0Az" secondAttribute="leading" constant="32" id="6Hm-kY-V6w"/>
+                                    <constraint firstItem="MeP-pS-ZkZ" firstAttribute="top" secondItem="hVX-ws-0Az" secondAttribute="top" constant="32" id="RAM-PL-sWu"/>
+                                    <constraint firstAttribute="bottom" secondItem="MeP-pS-ZkZ" secondAttribute="bottom" constant="32" id="cOb-Ds-LjK"/>
+                                    <constraint firstAttribute="trailing" secondItem="MeP-pS-ZkZ" secondAttribute="trailing" constant="32" id="ydU-EC-fJN"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <constraints>
+                            <constraint firstItem="hVX-ws-0Az" firstAttribute="width" secondItem="TwD-29-ekW" secondAttribute="width" id="AXX-Ln-VE6"/>
+                            <constraint firstItem="hVX-ws-0Az" firstAttribute="top" secondItem="TwD-29-ekW" secondAttribute="top" id="Gsz-n0-LCn"/>
+                            <constraint firstItem="hVX-ws-0Az" firstAttribute="height" secondItem="TwD-29-ekW" secondAttribute="height" placeholder="YES" id="Ll8-RB-0Fu"/>
+                            <constraint firstAttribute="trailing" secondItem="hVX-ws-0Az" secondAttribute="trailing" id="M6i-16-pth"/>
+                            <constraint firstItem="hVX-ws-0Az" firstAttribute="leading" secondItem="TwD-29-ekW" secondAttribute="leading" id="brK-P4-2cs"/>
+                            <constraint firstAttribute="bottom" secondItem="hVX-ws-0Az" secondAttribute="bottom" id="nPh-rH-RM8"/>
+                        </constraints>
+                    </scrollView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L6r-wA-rlK">
+                        <rect key="frame" x="16" y="16" width="319" height="68"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vHG-dV-VcL">
+                                <rect key="frame" x="0.0" y="0.0" width="319" height="68"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="vHG-dV-VcL" secondAttribute="trailing" id="JCn-g5-Zz4"/>
+                            <constraint firstAttribute="bottom" secondItem="vHG-dV-VcL" secondAttribute="bottom" id="aNJ-iU-ych"/>
+                            <constraint firstItem="vHG-dV-VcL" firstAttribute="top" secondItem="L6r-wA-rlK" secondAttribute="top" id="rVK-UK-tTQ"/>
+                            <constraint firstItem="vHG-dV-VcL" firstAttribute="leading" secondItem="L6r-wA-rlK" secondAttribute="leading" id="wwd-Hj-u6o"/>
+                        </constraints>
+                    </view>
                 </subviews>
             </view>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="TwD-29-ekW" secondAttribute="trailing" constant="16" id="AG1-JX-lLA"/>
+                <constraint firstItem="niV-5a-nwa" firstAttribute="leading" secondItem="TwD-29-ekW" secondAttribute="leading" id="Hsu-Qy-PGS"/>
+                <constraint firstItem="niV-5a-nwa" firstAttribute="top" secondItem="TwD-29-ekW" secondAttribute="top" id="O3S-G2-5wA"/>
+                <constraint firstItem="TwD-29-ekW" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="Qg7-nM-zcU"/>
+                <constraint firstAttribute="trailing" secondItem="L6r-wA-rlK" secondAttribute="trailing" constant="16" id="TvG-c2-ejJ"/>
+                <constraint firstItem="TwD-29-ekW" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="100" id="a7q-7B-P75"/>
+                <constraint firstItem="niV-5a-nwa" firstAttribute="top" secondItem="L6r-wA-rlK" secondAttribute="bottom" constant="16" id="dM8-hr-2An"/>
+                <constraint firstItem="L6r-wA-rlK" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="16" id="k8F-kt-yRE"/>
+                <constraint firstItem="L6r-wA-rlK" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="16" id="rY9-ze-Wvz"/>
+                <constraint firstItem="niV-5a-nwa" firstAttribute="bottom" secondItem="TwD-29-ekW" secondAttribute="bottom" id="rc8-P5-Avd"/>
+                <constraint firstAttribute="bottom" secondItem="TwD-29-ekW" secondAttribute="bottom" constant="16" id="rtQ-xz-HOr"/>
+                <constraint firstItem="niV-5a-nwa" firstAttribute="trailing" secondItem="TwD-29-ekW" secondAttribute="trailing" id="vn1-TC-yuK"/>
+            </constraints>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="351" height="162"/>
+            <size key="customSize" width="351" height="489"/>
             <connections>
-                <outlet property="dateLabel" destination="yfC-wr-GFL" id="io9-Mb-TAc"/>
+                <outlet property="badColorTitleLabel" destination="arX-Gt-TLy" id="JdS-cl-2qi"/>
+                <outlet property="containerView" destination="niV-5a-nwa" id="XtC-Ve-Khw"/>
+                <outlet property="dateLabel" destination="vHG-dV-VcL" id="1rd-S3-ieK"/>
+                <outlet property="goodColorTitleLabel" destination="6iX-gt-GsE" id="SUc-Hf-gPR"/>
+                <outlet property="scrollView" destination="TwD-29-ekW" id="2Y6-iT-Pan"/>
             </connections>
-            <point key="canvasLocation" x="-80.434782608695656" y="186.16071428571428"/>
+            <point key="canvasLocation" x="-80.434782608695656" y="294.97767857142856"/>
         </collectionViewCell>
     </objects>
 </document>
